// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render nested collection with filterTerm 1`] = `
<DocumentFragment>
  .emotion-4 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1);
  border-radius: 5px;
  background-color: #fff;
  width: 250px;
  padding: 8px 0 12px;
  position: fixed;
  max-height: calc(100vh - 112px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  font-size: 23px;
  font-weight: 600;
  padding: 0;
  margin: 18px 12px 12px;
  color: #313d3e;
}

.emotion-2 {
  margin: 16px 0 0;
  list-style: none;
  overflow: auto;
}

<aside
    class="emotion-4 emotion-5"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      collection.sidebar.collections
    </h2>
    <collection-search
      collections="OrderedMap { 0: Map { \\"name\\": \\"posts\\", \\"label\\": \\"Posts\\", \\"nested\\": Map { \\"depth\\": 10 } } }"
      searchterm=""
    />
    <ul
      class="emotion-2 emotion-3"
    >
      <li>
        <nested-collection
          collection="Map { \\"name\\": \\"posts\\", \\"label\\": \\"Posts\\", \\"nested\\": Map { \\"depth\\": 10 } }"
          data-testid="posts"
          filterterm="dir1/dir2"
        />
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Sidebar should render sidebar with a nested collection 1`] = `
<DocumentFragment>
  .emotion-4 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1);
  border-radius: 5px;
  background-color: #fff;
  width: 250px;
  padding: 8px 0 12px;
  position: fixed;
  max-height: calc(100vh - 112px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  font-size: 23px;
  font-weight: 600;
  padding: 0;
  margin: 18px 12px 12px;
  color: #313d3e;
}

.emotion-2 {
  margin: 16px 0 0;
  list-style: none;
  overflow: auto;
}

<aside
    class="emotion-4 emotion-5"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      collection.sidebar.collections
    </h2>
    <collection-search
      collections="OrderedMap { 0: Map { \\"name\\": \\"posts\\", \\"label\\": \\"Posts\\", \\"nested\\": Map { \\"depth\\": 10 } } }"
      searchterm=""
    />
    <ul
      class="emotion-2 emotion-3"
    >
      <li>
        <nested-collection
          collection="Map { \\"name\\": \\"posts\\", \\"label\\": \\"Posts\\", \\"nested\\": Map { \\"depth\\": 10 } }"
          data-testid="posts"
        />
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Sidebar should render sidebar with a simple collection 1`] = `
<DocumentFragment>
  .emotion-6 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1);
  border-radius: 5px;
  background-color: #fff;
  width: 250px;
  padding: 8px 0 12px;
  position: fixed;
  max-height: calc(100vh - 112px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  font-size: 23px;
  font-weight: 600;
  padding: 0;
  margin: 18px 12px 12px;
  color: #313d3e;
}

.emotion-4 {
  margin: 16px 0 0;
  list-style: none;
  overflow: auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  border-left: 2px solid #fff;
  z-index: -1;
}

.emotion-2 mocked-icon {
  margin-right: 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

<aside
    class="emotion-6 emotion-7"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      collection.sidebar.collections
    </h2>
    <collection-search
      collections="OrderedMap { 0: Map { \\"name\\": \\"posts\\", \\"label\\": \\"Posts\\" } }"
      searchterm=""
    />
    <ul
      class="emotion-4 emotion-5"
    >
      <li>
        <a
          class="emotion-2 emotion-3"
          data-testid="posts"
          href="/collections/posts"
        >
          <mocked-icon
            type="write"
          />
          Posts
        </a>
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;

exports[`Sidebar should render sidebar without search 1`] = `
<DocumentFragment>
  .emotion-6 {
  box-shadow: 0 2px 6px 0 rgba(68,74,87,0.05),0 1px 3px 0 rgba(68,74,87,0.1);
  border-radius: 5px;
  background-color: #fff;
  width: 250px;
  padding: 8px 0 12px;
  position: fixed;
  max-height: calc(100vh - 112px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  font-size: 23px;
  font-weight: 600;
  padding: 0;
  margin: 18px 12px 12px;
  color: #313d3e;
}

.emotion-4 {
  margin: 16px 0 0;
  list-style: none;
  overflow: auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  border-left: 2px solid #fff;
  z-index: -1;
}

.emotion-2 mocked-icon {
  margin-right: 8px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2.sidebar-active {
  color: #3a69c7;
  background-color: #e8f5fe;
  border-left-color: #4863c6;
}

<aside
    class="emotion-6 emotion-7"
  >
    <h2
      class="emotion-0 emotion-1"
    >
      collection.sidebar.collections
    </h2>
    <ul
      class="emotion-4 emotion-5"
    >
      <li>
        <a
          class="emotion-2 emotion-3"
          data-testid="posts"
          href="/collections/posts"
        >
          <mocked-icon
            type="write"
          />
          Posts
        </a>
      </li>
    </ul>
  </aside>
</DocumentFragment>
`;
